--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -29,7 +29,7 @@
 <body>
 <div class="alice-wrapper">
     <div class="process-container">
-        <div class="process-toolbar">
+        <div class="process-header">
             <span class="logo"></span>
             <span class="process-designer">Process Designer</span>
             <span class="separator"></span>
