--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -1466,7 +1466,7 @@ button.ghost-line:disabled .icon {
 }
 
 /* 폼 디자이너 팝업 layout
- * container - toolbar : 상단 메뉴
+ * container - header : 상단 메뉴
  *           - contents : 왼쪽 패널
  *                   - drawing-board : 실제 컴포넌트들이 그려지는 영역
  *           - aside : 오른쪽 패널
@@ -1485,27 +1485,28 @@ button.ghost-line:disabled .icon {
   outline: none !important;
 }
 
-.form-container .toolbar {
+.form-container .header {
+  display: flex;
   width: 100vw;
   height: 3.125rem;
-  font-size: 18px;
-  font-weight: 500;
+  background-color: #0098ff;
+  align-items: center;
   color: #ffffff;
-  background-color: #0098FF;
-  padding: 0.9375rem 1.25rem;
+  font-weight: 500;
+  font-size: 18px;
 }
 
-.form-container .toolbar svg.logo {
+.form-container .header svg.logo {
   float: left;
 }
 
-.form-container .toolbar span.name {
+.form-container .header span.name {
   float: left;
   padding: 0 1.25rem;
   line-height: 1.25rem;
 }
 
-.form-container .toolbar span.separator {
+.form-container .header span.separator {
   width: 0.063rem;
   height: 1.25rem;
   background-color: #ffffff;
@@ -1514,7 +1515,7 @@ button.ghost-line:disabled .icon {
   opacity: 0.3;
 }
 
-.form-container .toolbar button {
+.form-container .header button {
   margin-right: 2.5625rem;
   padding: 0;
   height: 1.25rem;
@@ -1526,7 +1527,7 @@ button.ghost-line:disabled .icon {
   cursor: pointer;
 }
 
-.form-container .toolbar button .icon-save {
+.form-container .header button .icon-save {
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -1541,7 +1542,7 @@ button.ghost-line:disabled .icon {
   background: #ffffff;
 }
 
-.form-container .toolbar button .icon-save-as {
+.form-container .header button .icon-save-as {
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -1556,7 +1557,7 @@ button.ghost-line:disabled .icon {
   background: #ffffff;
 }
 
-.form-container .toolbar button .icon-undo {
+.form-container .header button .icon-undo {
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -1571,7 +1572,7 @@ button.ghost-line:disabled .icon {
   background: #ffffff;
 }
 
-.form-container .toolbar button .icon-redo {
+.form-container .header button .icon-redo {
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -1586,7 +1587,7 @@ button.ghost-line:disabled .icon {
   background: #ffffff;
 }
 
-.form-container .toolbar button .icon-preview {
+.form-container .header button .icon-preview {
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -1601,7 +1602,7 @@ button.ghost-line:disabled .icon {
   background: #ffffff;
 }
 
-.form-container .toolbar button .icon-save-out {
+.form-container .header button .icon-save-out {
   display: inline-block;
   width: 20px;
   height: 20px;
@@ -1616,12 +1617,12 @@ button.ghost-line:disabled .icon {
   background: #ffffff;
 }
 
-.form-container .toolbar span.form-name {
+.form-container .header span.form-name {
   height: 1.25rem;
   line-height: 1.25rem;
   font-size: 16px;
-  line-height: 1.25rem;
-  float: right;
+  margin-left: auto;
+  margin-right: 0.938rem;
 }
 
 .form-container .contents {
@@ -1676,17 +1677,15 @@ button.ghost-line:disabled .icon {
   display: inherit;
 }
 
-.form-container .aside {
+.form-container .properties {
+  background-color: #ffffff;
   display: flex;
   flex: 0 0 auto;
   flex-direction: column;
-  float: left;
-  right: 0;
-  top: 3.125rem;
+  float: right;
   width: 18.75rem;
   height: calc(100vh - 3.125rem);
   min-height: calc(100vh - 3.125rem);
-  background-color: #ffffff;
   box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);
   overflow-y: auto;
   -ms-overflow-style: none;
@@ -1695,7 +1694,7 @@ button.ghost-line:disabled .icon {
   /* Firefox */
 }
 
-.form-container .aside::-webkit-scrollbar {
+.form-container .properties::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari, Opera*/
 }
