--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -38,19 +38,15 @@ $dropzone-pressed-bg-color:     $white;
 // container
 $container-background-color:    $light-gray;
 
-// container > toolbar
-$toolbar-font-size:             18px;
-$toolbar-font-weight :          500; // medium
-$toolbar-font-color:            $white;
-$toolbar-height:                3.125rem; // 50px 
-$toolbar-top-bottom-padding:    0.9375rem; // 15px
-$toolbar-real-height:           $toolbar-height - ($toolbar-top-bottom-padding * 2); // 25px
-$toolbar-bg-color:              $point-blue;
-$toolbar-separator-color:       $white;
-$toolbar-margin-right:          1.25rem; // 20px
-$toolbar-name-font-size:        16px;
+// container > header
+$header-font-size:             18px;
+$header-top-bottom-padding:    0.9375rem; // 15px
+$header-real-height:           $header-height - ($header-top-bottom-padding * 2); // 25px
+$header-separator-color:       $white;
+$header-margin-right:          1.25rem; // 20px
+$header-name-font-size:        16px;
 
-// container > contents, aside > drawing-board
+// container > contents, properties > drawing-board
 $drawing-board-bg-color:        $white;
 $drawing-board-border:          0.0625rem solid $line-gray; // 1px
 $drawing-board-box-shadow:      0 0 0.9375rem 0 rgba(204, 206, 209, 0.3); // 흐림 15px,  $pressed-gray, 불투명도 30%;
@@ -63,10 +59,10 @@ $column-row:                    12;  // 폼을 나누는 갯수
 $form-drawing-board-width:      59.38rem; // 950px
 $form-drawing-board-top-margin: 6.563rem; // 105px
 
-// container > aside
-$form-aside-bg-color:           $white;
-$form-aside-width:              18.75rem; // 300px
-$form-aside-box-shadow:         -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);// -1px 15px 7px 0px $pressed-gray, 불투명도 60%;
+// container > properties
+$form-properties-bg-color:           $white;
+$form-properties-width:              18.75rem; // 300px
+$form-properties-box-shadow:         -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);// -1px 15px 7px 0px $pressed-gray, 불투명도 60%;
 
 // component
 $component-border:               0.0625rem solid transparent;
