--- a/src/main/resources/public/src/scss/portal/_layout.scss
+++ b/src/main/resources/public/src/scss/portal/_layout.scss
@@ -1,16 +1,15 @@
+@import '../template/_layout.scss';
+
 .portal-container {
   overflow: auto;
   height: 100vh;
   width: 100vw;
+  @include container;
 
   .header {
-    display: flex;
-    height: 3.125rem; // 50px
-    background-color: $point-blue;
-    align-items: center;
+    @include header;
 
     .title {
-      color: $white;
       font-size: 1.125rem; // 18px
       font-weight: $font-weight-medium;
       margin-left: 0.625rem; // 10px
@@ -27,7 +26,6 @@
     }
 
     .login {
-      color: #ffffff;
       font-size: 1rem; // 16px
       font-weight: 500;
       cursor: pointer;
