--- a/src/main/resources/public/src/scss/process/_variables.scss
+++ b/src/main/resources/public/src/scss/process/_variables.scss
@@ -7,9 +7,9 @@ $element-readonly-border-width:               0.0625rem; // 1px
 
 
 $white: #fff;
-$process-toolbar-height: 3.125rem; // 50px
-$process-toolbar-top-bottom-padding: 0.563rem; // 9px
-$process-toolbar-real-height: $process-toolbar-height - ($process-toolbar-top-bottom-padding * 2);
+$process-header-height: 3.125rem; // 50px
+$process-header-top-bottom-padding: 0.563rem; // 9px
+$process-header-real-height: $process-header-height - ($process-header-top-bottom-padding * 2);
 $process-element-palette-width: 6.25rem; // 100px
 $process-properties-panel-width: 18.75rem; // 300px
 $process-container-min-width: 75rem;  // 1200px
