#9305 [템플릿 SCSS] _layout.scss
- MR feedback

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -1487,6 +1487,7 @@ button.ghost-line:disabled .icon {
 
 .form-container .header {
   display: flex;
+  position: fixed;
   width: 100vw;
   height: 3.125rem;
   background-color: #0098ff;
