--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1621,6 +1621,7 @@ button.ghost-line:disabled .icon {
 
 .portal-container .header {
   display: flex;
+  position: fixed;
   width: 100vw;
   height: 3.125rem;
   background-color: #0098ff;
