--- a/src/main/resources/public/src/scss/template/_layout.scss
+++ b/src/main/resources/public/src/scss/template/_layout.scss
@@ -14,6 +14,7 @@ $properties-box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6
 
 @mixin header {
     display: flex;
+    position: fixed;
     width: 100vw;
     height: 3.125rem;
     background-color: $point-blue;
