--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -138,7 +138,7 @@
     width: $menu-width;
     height: $menu-height;
     background-color: $menu-bg-color;
-    position: absolute;
+    position: relative;
     left: 0;
     top: $logo-height;
     z-index: 999;
