--- a/src/main/resources/public/src/scss/portal/_layout.scss
+++ b/src/main/resources/public/src/scss/portal/_layout.scss
@@ -7,6 +7,10 @@
   @include container;
 
   .header {
+    max-width: 120rem;
+    background-color: $point-blue;
+    color: $white;
+    font-weight: $font-weight-medium;
     @include header;
 
     .title {
@@ -30,5 +34,9 @@
       font-weight: 500;
       cursor: pointer;
     }
+  }
+
+  .portal-contents {
+    margin-top: $layout-header-height;
   }
 }
