--- a/src/main/resources/public/template/layout/defaultLayout.html
+++ b/src/main/resources/public/template/layout/defaultLayout.html
@@ -7,14 +7,14 @@
 		<th:block layout:fragment="scriptLink"></th:block>
 	</head>
 	<body>
-		<div class="wrap-screen">
+		<div class="alice-wrapper">
 			<th:block th:replace="layout/navigation">menu</th:block>
 			<th:block th:replace="layout/menu">menu</th:block>
 			<div class="container">
 				<th:block layout:fragment="content"></th:block>
 			</div>
+			<footer th:replace="layout/fragments/commonFooter :: commonFooter"></footer>
 		</div>
-		<footer th:replace="layout/fragments/commonFooter :: commonFooter"></footer>
 		<th:block layout:fragment="pageScript"></th:block>
 	</body>
 </html>
