--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -11,6 +11,7 @@
 @import '../../template/_mixins.scss'; // 상속 불가
 @import '../../template/_common.scss'; // 상속 불가
 @import '../../template/_scrollbars.scss';
+@import '../../template/_file-uploader.scss';
 @import '_variables.scss';
 @import '_fonts.scss';
 @import '_mixin.scss';
@@ -22,7 +23,6 @@
 @import '_container.scss';
 @import '_gnb.scss';
 @import '_notification.scss';
-@import '_fileUploader.scss';
 @import "../../template/_date-picker.scss";
 @import '_colorpicker.scss';
 @import '_quill.scss';
