--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -27,8 +27,8 @@
                     <textarea id="noticeContents" name="noticeContents" maxlength="2048" rows="11" class="textarea-scroll-wrapper"
                               th:text="${notice?.noticeContents}"></textarea>
                 </div>
-                <div class="form-set file-edit-contents">
-                    <label class="file-head" th:text="#{common.label.attachFile}"></label>
+                <div class="form-set file-uploader-edit">
+                    <label class="file-uploader-title" th:text="#{common.label.attachFile}"></label>
                     <div id="dropZoneFiles"></div>
                     <div id="dropZoneUploadedFiles"></div>
                 </div>
@@ -246,6 +246,7 @@
         /*<![CDATA[ */
         window.onload = function() {
             document.getElementById('noticeTitle').focus();
+            fileUploader.init({extra: {formId: 'frm', ownId: /*[[${notice?.noticeNo}]]*/''}});
         };
 
         function restSubmit(method, url, async) {
