--- a/src/main/resources/public/template/notice/noticePopUp.html
+++ b/src/main/resources/public/template/notice/noticePopUp.html
@@ -19,10 +19,10 @@
             <div class="horizontal-bar"></div>
             <div class="view-text"><pre><span th:text="${noticePopUp?.noticeContents}"></span></pre></div>
             <div class="horizontal-bar"></div>
-            <div class="view-column">
-                <span class="file-attachment" th:text="#{common.label.attachFile}"></span>
+            <div class="file-uploader-view">
+                <span class="file-uploader-title" th:text="#{common.label.attachFile}"></span>
                 <span class="vertical-bar"></span>
-                <div class="file-attach-input">
+                <div class="file-uploader-list">
                     <div id="dropZoneFiles"></div>
                     <div id="dropZoneUploadedFiles"></div>
                 </div>
