--- a/src/main/resources/public/template/process/processImport.html
+++ b/src/main/resources/public/template/process/processImport.html
@@ -18,8 +18,8 @@
             <label th:text="#{process.label.description}" for="process_desc"></label>
             <textarea id="process_desc" maxlength="256" tabindex="2" class="textarea-scroll-wrapper"></textarea>
         </div>
-        <div class="form-set">
-            <label class="required" th:text="#{process.label.importFile}"></label>
+        <div class="form-set file-uploader-edit">
+            <label class="file-uploader-title required" th:text="#{process.label.importFile}"></label>
             <div id="dropZoneFiles"></div>
             <div id="dropZoneUploadedFiles"></div>
         </div>
