--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -50,8 +50,8 @@
                     <label th:text="#{common.label.contents}" for="boardContents"/>
                     <div class="text-editor" id="boardContents"></div>
                 </div>
-                <div class="form-set file-edit-contents" id="divFile" name="divFile">
-                    <label class="file-head" th:text="#{common.label.attachFile}"/>
+                <div class="form-set file-uploader-edit" id="divFile" name="divFile">
+                    <label class="file-uploader-title" th:text="#{common.label.attachFile}"/>
                     <div id="dropZoneFiles"></div>
                     <div id="dropZoneUploadedFiles"></div>
                 </div>
