--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -77,8 +77,8 @@
                     </div>
                 </div>
                 <div class="column-6">
-                    <div class="form-set avatar-edit-contents">
-                        <label class="avatar-head" th:text="#{user.label.avatar}"></label>
+                    <div class="form-set avatar-edit">
+                        <label class="avatar-title" th:text="#{user.label.avatar}"></label>
                         <div id="avatarDropZone"></div>
                         <div class="avatar-description">
                             <span class="avatar-text" th:text="#{user.label.FileSizeLimit}"></span>
