--- a/src/main/resources/public/src/scss/portal/portal.scss
+++ b/src/main/resources/public/src/scss/portal/portal.scss
@@ -13,6 +13,7 @@
 @import '../template/_common.scss'; // 상속 불가
 @import '../template/_scrollbars.scss';
 @import '../template/_file-uploader.scss';
+@import '../template/_avatar.scss';
 @import '_variables.scss';
 @import '_fonts.scss';
 @import '_mixin.scss';
