--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -197,3 +197,24 @@ $file-uploader-filename-font-color:          $dark-gray;
 $file-uploader-filesize-font-color:          $gray;
 // 파일 미존재시
 $file-uploader-no-date-font-color:           $gray;
+
+//////////////////////////////// avatar ////////////////////////////////
+$avatar-font-size:                           $font-size-base;
+$avatar-font-color:                          $light-black;
+$avatar-font-weight:                         $font-weight-medium;
+// drag and drop 영역
+$avatar-dropzone-width:                      20.63rem; // 330px
+$avatar-dropzone-height:                     20.63rem; // 330px
+$avatar-dropzone-sm-width:                   9.375rem; // 150px
+$avatar-dropzone-sm-height:                  9.375rem; // 150px
+$avatar-dropzone-font-size:                  $font-size-base;
+$avatar-dropzone-font-color:                 $gray;
+$avatar-dropzone-font-weight:                $font-weight-regular;
+$avatar-dropzone-bg-color:                   $light-gray;
+$avatar-dropzone-border:                     0.0625rem solid $line-gray; // 1px
+// browse click 버튼
+$avatar-dropzone-clickable-font-color:       $point-blue;
+// description
+$avatar-desc-font-size:                      $font-size-base;
+$avatar-desc-font-color:                     $gray;
+$avatar-desc-font-weight:                    $font-weight-regular;
